@@ -58,6 +58,13 @@
                         <include>com.google.common.**</include>
                       </includes>
                     </relocation>
+                    <relocation>
+                      <pattern>io</pattern>
+                      <shadedPattern>${shadeBase}.io</shadedPattern>
+                      <includes>
+                        <include>io.grpc.**</include>
+                      </includes>
+                    </relocation>
                   </relocations>
                 </configuration>
               </execution>
@@ -155,6 +162,9 @@
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.util=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+            -Dio.netty.tryReflectionSetAccessible=true
+            -Dio.grpc.netty.shaded.io.netty.tryReflectionSetAccessible=true
           </argLine>
         </configuration>
       </plugin>
